--- a/_config.yml
+++ b/_config.yml
@@ -26,11 +26,10 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/yurith-says" # the subpath of your site, e.g. /blog
 url: "https://yurith-rubio.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
 github_username:  yurith-rubio
 
 # Build settings
-theme: minima
+#theme: minima
 plugins:
   - jekyll-feed
 
